[package]
name = "mm-exchange-core"
edition.workspace = true
version.workspace = true

[dependencies]
mm-common = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal_macros = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }
once_cell = "1"

[lints]
workspace = true
